--- a/src/styles/sidebar.scss
+++ b/src/styles/sidebar.scss
@@ -10,7 +10,6 @@
   .sidebar-container {
     transition: width 0.28s;
     width: $sideBarWidth !important;
-    background-color: $menuBg;
     height: 100%;
     position: fixed;
     font-size: 0px;
@@ -54,6 +53,8 @@
     }
 
     .svg-icon {
+      width: 1.2em;
+      height: 1.2em;
       margin-right: 16px;
     }
 
@@ -61,12 +62,29 @@
       border: none;
       height: 100%;
       width: 100% !important;
+      padding: 0 7px;
+      background-color: $subMenuBg;
+      .el-submenu__title {
+        margin: 6px 0;
+        padding-left: 25px!important;
+        border-radius: 4px;
+        background-color: var(--el-menu-item-bg-color) !important;
+        box-shadow: 0px 0px 4px rgba(0, 94, 235, 0.1);
+        box-sizing: border-box;
+      }
+      .el-menu--inline {
+        padding: 0;
+      }
     }
-
     // menu hover
     .submenu-title-noDropdown,
     .el-submenu__title {
+      span {
+        vertical-align: unset !important;
+      }
+      background-color: $subMenuBg;
       &:hover {
+        color: $primary-color!important;
         background-color: $menuHover !important;
       }
     }
@@ -76,23 +94,20 @@
     }
 
     & .nest-menu .el-submenu>.el-submenu__title,
-    & .el-submenu .el-menu-item {
-      min-width: $sideBarWidth !important;
+    & .el-submenu {
       background-color: $subMenuBg !important;
-
       &:hover {
         background-color: $subMenuHover !important;
       }
     }
   }
-
   .hideSidebar {
     .sidebar-container {
-      width: 54px !important;
+      width: 75px !important;
     }
 
     .main-container {
-      margin-left: 54px;
+      margin-left: 75px;
     }
 
     .submenu-title-noDropdown {
@@ -140,7 +155,7 @@
   }
 
   .el-menu--collapse .el-menu .el-submenu {
-    min-width: $sideBarWidth !important;
+    background-color: $subMenuBg;
   }
 
   // mobile responsive
@@ -151,7 +166,6 @@
 
     .sidebar-container {
       transition: transform .28s;
-      width: $sideBarWidth !important;
     }
 
     &.hideSidebar {
@@ -172,6 +186,41 @@
   }
 }
 
+.el-menu, .el-menu--vertical {
+  .el-menu-item {
+    display: flex;
+    align-items: center;
+    margin: 3px 0;
+    padding-left: 25px!important;
+    border-radius: 4px;
+    background-color: var(--el-menu-item-bg-color) !important;
+    box-shadow: 0px 0px 4px rgba(0, 94, 235, 0.1);
+    box-sizing: border-box;
+    &:hover {
+      .svg-icon {
+        color: $primary-color;
+      }
+      span {
+        color: $primary-color;
+      }
+    }
+    &.is-active {
+      background-color: var(--el-menu-item-bg-color-active) !important;
+      border: 2px solid $primary-color;
+
+      &::before {
+        position: absolute;
+        border-radius: 4px;
+        left: 12px;
+        width: 4px;
+        height: 14px;
+        content: '';
+        background: $primary-color;
+      }
+    }
+  }
+}
+
 // when menu collapsed
 .el-menu--vertical {
   &>.el-menu {
@@ -179,24 +228,18 @@
       margin-right: 16px;
     }
   }
-
-  .nest-menu .el-submenu>.el-submenu__title,
-  .el-menu-item {
-    &:hover {
-      // you can use $subMenuHover
-      background-color: $menuHover !important;
-    }
-  }
-
   // the scroll bar appears when the subMenu is too long
   >.el-menu--popup {
+    border: solid 1px var(--el-menu-border-color);
+    border-radius: var(--el-border-radius-small);
+    box-shadow: var(--el-box-shadow-light);
+    background-color: var(--el-menu-bg-color)!important;
+    padding: 4px 8px;
     max-height: 100vh;
     overflow-y: auto;
-
     &::-webkit-scrollbar-track-piece {
       background: #d3dce6;
     }
-
     &::-webkit-scrollbar {
       width: 6px;
     }
