--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -1,4 +1,5 @@
 // base color
+$primary-color: #005eeb;
 $blue:#324157;
 $light-blue:#3A71A8;
 $red:#C03639;
@@ -9,17 +10,17 @@ $yellow:#FEC171;
 $panGreen: #30B08F;
 
 // sidebar
-$menuText:#bfcbd9;
-$menuActiveText:#409EFF;
-$subMenuActiveText:#f4f4f5; // https://github.com/ElemeFE/element/issues/12951
+$menuText:#303133;
+$menuActiveText:#005eeb;
+$subMenuActiveText:#005eeb; // https://github.com/ElemeFE/element/issues/12951
 
-$menuBg:#304156;
-$menuHover:#263445;
+$menuBg:#e5effd;
+$menuHover:rgba(255, 255, 255, .5);;
 
-$subMenuBg:#1f2d3d;
-$subMenuHover:#001528;
+$subMenuBg:rgba(0,0,0,0);
+$subMenuHover:rgba(0,0,0,0);
 
-$sideBarWidth: 210px;
+$sideBarWidth: 215px;
 
 // the :export directive is the magic sauce for webpack
 // https://www.bluematador.com/blog/how-to-share-variables-between-js-and-sass
