--- a/src/styles/element-ui.scss
+++ b/src/styles/element-ui.scss
@@ -14,6 +14,9 @@ html{
   font-weight: 400 !important;
 }
 
+.el-button--small, .el-button--mini {
+  font-size: 14px;
+}
 .el-upload {
   input[type="file"] {
     display: none !important;
