--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -1,7 +1,7 @@
 // base color
 $primary-color: #005eeb;
-$blue:#324157;
-$light-blue:#3A71A8;
+$blue:#005eeb;
+$light-blue: #2b7cff;
 $red:#C03639;
 $pink: #E65D6E;
 $green: #30B08F;
